--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.0",
+    "react-image-crop": "^11.0.6",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
