--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.24.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.6.0",
+    "@mui/material": "^6.1.1",
+    "@mui/styled-engine-sc": "^6.1.1",
+    "@mui/x-charts": "^7.18.0",
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.49.2",
     "@types/axios": "^0.14.0",
@@ -32,7 +37,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.11",
+    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.10",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
