--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.49.2",
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
